# ticket-system

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/api/v1/: routes.py  ticket_api.py
src/core/: ai.py  config.py  custom_anthropic.py  utils.py  worker.py
src/models/: database.py  schemas.py  ticket.py
tests/: test_api.py  test_utils.py
