[tool.poetry]
name = "ticket-system"
version = "0.1.0"
description = "rest api for ticket system"
authors = ["sleefd <sleefd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
rq = "^1.16.2"
python-dotenv = "^1.0.1"
anthropic = "^0.31.0"
redis = "^5.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
