[tool.poetry]
name = "ticket-system"
version = "0.1.0"
description = "rest api for ticket system"
authors = ["sleefd <sleefd@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic = {extras = ["email"], version = "^2.9.2"}
rq = "^1.16.2"
python-dotenv = "^1.0.1"
redis = "^5.0.7"
pydantic-settings = "^2.3.4"
requests = "^2.32.3"
langchain = "^0.2.7"
langchain-anthropic = "^0.1.20"
langchain-openai = "^0.1.16"
socksio = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
